--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escaner Taller</title>
+    <title>Escaner Tinto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
     <style>
@@ -16,12 +16,12 @@
 <body>
 
 <div class="container" style="max-width: 500px;">
-    <h3 class="text-center mb-4">Control de Taller</h3>
+    <h3 class="text-center mb-4">Control Tinto</h3>
 
     <div class="card mb-3">
         <div class="card-body">
             <label class="form-label">Código de Usuario</label>
-            <input type="text" id="usuario" class="form-control mb-3" placeholder="Ej: 39" value="">
+            <input type="text" id="usuario" class="form-control mb-3" placeholder="Ej: 1234" value="">
             
             <label class="form-label">Partida / Código QR</label>
             <div class="input-group mb-3">
